=== master

* Make to_json class/dataset method in json_serializer plugin accept :instance_block option to pass block to Model#to_json (jeremyevans)

* Make to_json methods in json_serializer plugin accept blocks that are used to transform values before serializing to JSON (jeremyevans)

* Make Sequel.object_to_json pass block to #to_json (jeremyevans)

* Deprecate identifier_columns plugin, not needed with Sequel.split_symbols = false (jeremyevans)

* Make reloading column_conflicts plugin not remove existing conflict markings (jeremyevans)

* Deprecate cti_base_model, cti_key, and cti_model_map class methods in class_table_inheritance plugin (jeremyevans)

* Make Model.skip_auto_validations(:not_null) in the auto_validations plugin skip not null checks for columns with default values (jeremyevans)

* Make Database#copy_into in jdbc/postgresql adapter respect :server option (jeremyevans)

* Make #to_hash and #to_hash_groups handle options in the static_cache plugin, and add rename #to_hash to #as_hash (jeremyevans)

* Rename Dataset#to_hash to #as_hash, and add #to_hash as an alias, to allow undefing #to_hash to fix ruby calling it implicitly (jeremyevans) (#1375)

* Handle PG* constants deprecated in pg 0.21.0 in the postgres adapter (jeremyevans) (#1377, #1378)

* Support :association_pks_use_associated_table association option in association_pks plugin (jeremyevans)

* Make pg_hstore extension reset hstore conversion proc when running Database#reset_conversion_procs (jeremyevans)

* Fix incorrect SQL used for inserting into a CTI subclass sharing the primary table when using the :alias option (jeremyevans)

=== 4.47.0 (2017-06-01)

* Deprecate pg_typecast_on_load plugin, only useful on deprecated do and swift adapters (jeremyevans)

* Deprecate association_autoreloading and many_to_one_pk_lookup plugins, which were made the default model behavior in Sequel 4 (jeremyevans)
