@@ -1,5 +1,7 @@
 === master
 
+* Remove support for :strict option in nested_attributes plugin, use :unmatched_pk option instead (jeremyevans)
+
 * Make to_json class/dataset method in json_serializer plugin accept :instance_block option to pass block to Model#to_json (jeremyevans)
 
 * Make to_json methods in json_serializer plugin accept blocks that are used to transform values before serializing to JSON (jeremyevans)
